welcome.lessons.welcome.array.array667.Array667.scala.error
array667:17: error: illegal start of simple expression
	while()(nums(indexOfValue(nums,7))==nums(1+(indexOfValue(nums,6)))){
              ^array667:27: error: ')' expected but '}' found.
}
^